2024 tolist less print